# pdc-search-engine

./: docker-compose.yml
crawler/: Dockerfile  crawl.py  main.py  prepare_data.py  pyproject.toml  run_all.sh  upload_to_solr.py
crawler/src/: constants.py  extract_content.py  get_search_results.py  save_extracted_data.py  save_search_results.py  scrape_and_save_content_from_search_results.py  scrape_duckduckgo_results.py  scrape_keyword.py  search_and_save_results.py
data/: keywords.txt
frontend/search-engine/: package.json
search-engine/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
search-engine/app/: globals.css  layout.tsx  page.tsx
search-engine/app/components/: Logo.tsx
solr/: Dockerfile  web.xml
